Update footer and README for improved navigation and copyright clarity

--- a/index.html
+++ b/index.html
@@ -498,6 +498,13 @@
 
 <footer>
     <p>From <em>Charlie and the Chocolate Factory</em> &nbsp;·&nbsp; Roald Dahl, 1964</p>
+    <p style="margin-top: 20px; font-size: 0.85rem;">
+        <a href="README.md" style="color: var(--warm); text-decoration: none; border-bottom: 1px solid var(--warm);">Read the README</a>
+        &nbsp;·&nbsp;
+        <a href="https://github.com/KeaganGilmore/roald-dahl-television-poem-vis" target="_blank" rel="noopener noreferrer" style="color: var(--warm); text-decoration: none; border-bottom: 1px solid var(--warm);">View on GitHub</a>
+        &nbsp;·&nbsp;
+        <a href="mailto:keagangilmore@gmail.com" style="color: var(--warm); text-decoration: none; border-bottom: 1px solid var(--warm);">Contact</a>
+    </p>
 </footer>
 
 </body>
